# OpenGL-game

Breakout/: Breakout.code-workspace  CMakeLists.txt  main.cpp
Breakout/Resources/: core.fs  core.vs
Breakout/src/Engine/: CMakeLists.txt
Breakout/src/Engine/Node/: node.hpp
Breakout/src/Engine/Scene/: scene.cpp  scene.hpp
Breakout/src/Engine/Shader/: shader.cpp  shader.hpp
Breakout/src/Engine/Sprite/: sprite.cpp  sprite.hpp  spriterenderer.cpp  spriterenderer.hpp
Breakout/src/Engine/Texture/: texture.cpp  texture.hpp
Breakout/src/Engine/Utility/: rect.hpp  vec.hpp  vec2.hpp  vec3.hpp
Breakout/src/Engine/Window/: event.hpp  resourcemanager.cpp  resourcemanager.hpp  window.cpp  window.hpp
